# cpp-vgoswec

./: .gitignore  CMakeLists.txt  LICENSE  README.md  check.md
analysis/: BENCHMARK_NOTES.md  FINDINGS.md  FINDINGS_3REGIME.md  FINDINGS_PASSIVE.md  README.md  kpkd_sweep_VGM0.csv  kpkd_sweep_VGM10.csv  kpkd_sweep_VGM20.csv  kpkd_sweep_VGM45.csv  kpkd_sweep_VGM90.csv
analysis/cc/: capture_efficiency_VGM0.csv  capture_efficiency_VGM10.csv  capture_efficiency_VGM20.csv  capture_efficiency_VGM45.csv  capture_efficiency_VGM90.csv
analysis/cc_hinge/: README.md  cc_impedance_hinge_summary.csv
analysis/opt_passive/: capture_efficiency_VGM0.csv  capture_efficiency_VGM10.csv  capture_efficiency_VGM20.csv  capture_efficiency_VGM45.csv  capture_efficiency_VGM90.csv
analysis/passive_guarded/: README.md  capture_efficiency_VGM0.csv  capture_efficiency_VGM10.csv  capture_efficiency_VGM20.csv  capture_efficiency_VGM45.csv  capture_efficiency_VGM90.csv
analysis/three_regime/: operating_envelope.csv  operating_envelope_efficiency.csv
config/: vgoswec_0_cc.yaml  vgoswec_0_exc_ff_pid.yaml  vgoswec_0_freedecay.yaml  vgoswec_0_opt_passive.yaml  vgoswec_0_passive.yaml  vgoswec_10_cc.yaml  vgoswec_10_exc_ff_pid.yaml  vgoswec_10_freedecay.yaml  vgoswec_10_opt_passive.yaml  vgoswec_10_passive.yaml  vgoswec_20_cc.yaml  vgoswec_20_exc_ff_pid.yaml  vgoswec_20_freedecay.yaml  vgoswec_20_opt_passive.yaml  vgoswec_20_passive.yaml  vgoswec_45_cc.yaml  vgoswec_45_exc_ff_pid.yaml  vgoswec_45_freedecay.yaml  vgoswec_45_opt_passive.yaml  vgoswec_45_passive.yaml  vgoswec_90_cc.yaml  vgoswec_90_exc_ff_pid.yaml  vgoswec_90_freedecay.yaml  vgoswec_90_opt_passive.yaml  vgoswec_90_passive.yaml
data/geometry/stl_files/: VGOSWEC_VGM0_BEM.STLbak  VGOSWEC_VGM45_BEM.STL  VGOSWEC_VGM90_BEM.STL  VGOSWEC_VGM90_BEM.STLbak  center_beam_w_foundation_BEM.STLbak
docs/: CONTROLLERS.md  EOD_SUMMARY_2026-07-09.md  EOD_SUMMARY_2026-07-11.md  HIL_MIGRATION.md  MPC_TODO.md  PROJECT_STATE.md  REPRODUCTION.md  controller_power_comparison.md  freedecay_validation.md
geometry/stl_files/: VGOSWEC_VGM0_BEM.STL  VGOSWEC_VGM10_BEM.STL  VGOSWEC_VGM10_BEM.STLbak  VGOSWEC_VGM20_BEM.STL  VGOSWEC_VGM20_BEM.STLbak  VGOSWEC_VGM45_BEM.STLbak  center_beam_w_foundation_BEM.STL
hydroData/: hinged_vgoswec_0.h5  hinged_vgoswec_10.h5  hinged_vgoswec_20.h5  hinged_vgoswec_45.h5  hinged_vgoswec_90.h5
notes/: END_OF_DAY_2026-07-10.md  baseline_2026-07-07.md  latest_sweep.txt
scripts/: capture_efficiency_sweep.py  cc_capture_efficiency_sweep.py  cc_impedance_hinge_check.py  cc_vs_ffpid_comparison.py  controller_power_sweep.py  freedecay_analysis.py  freedecay_validation.py  passive_vs_optpassive_sweep.py  plot_freedecay_validation.py  plot_kpkd_surface.py  run_controller_sweep.sh  setup_env.sh  sweep_kpkd_vgoswec.sh  three_regime_comparison.py
src/: active_pto.cpp  active_pto.h  config_loader.cpp  config_loader.h  demo_vgoswec.cpp  excitation_force_provider.cpp  excitation_force_provider.h  impedance.cpp  impedance.h  pid_controller.cpp  pid_controller.h  rsda_pto_functor.cpp  rsda_pto_functor.h
tests/: smoke_test.cpp
